--- a/index.html
+++ b/index.html
@@ -5,21 +5,109 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+
   <title></title>
+  <script src="https://kit.fontawesome.com/15ddfdef82.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div>
     <h1>Dev Jhonatan Calle</h1>
+    <img id="perfil" src="/img/perfil.jpg" alt="">
     <h1>Fullstack Developer</h1>
-  </div>
+    <div id="cont">
+      <div id="tarjeta">
+        <div id="icon">
+          <i class="fa-brands fa-html5 ">      </i>
+        </div>
+        <div id="nombre">
+          <h4>Html</h4>
+        </div>
+      </div>
+      <div id="tarjeta">
+        <div id="icon">
+          <i class="fa-brands fa-react ">      </i>
+        </div>
+        <div id="nombre">
+          <h4>React</h4>
+        </div>
+      </div>
+      <div id="tarjeta">
+        <div id="icon">
+            <i class="fa-brands fa-java"></i>
+        </div>
+        <div id="nombre">
+          <h4>Java</h4>
+        </div>
+      </div>
+      <div id="tarjeta">
+        <div id="icon">
+          <i class="fa-brands fa-square-js"></i>
+        </div>
+        <div id="nombre">
+          <h4>JavaScrip</h4>
+        </div>
+      </div>
+      <div id="tarjeta">
+        <div id="icon">
+          <i class="fa-brands fa-css3-alt"></i>
+        </div>
+        <div id="nombre">
+          <h4>CSS</h4>
+        </div>
+      </div>
+    </div>
+    <div id="cont">
+      <div id="tarjeta">
+        <div id="icon">
+          <i class="fa-brands fa-python"></i>
+        </div>
+        <div id="nombre">
+          <h4>Python</h4>
+        </div>
+      </div>
+      <div id="tarjeta">
+        <div id="icon">
+          <i class="fa-brands fa-node"></i>
+        </div>
+        <div id="nombre">
+          <h4>Node</h4>
+        </div>
+      </div>
+      <div id="tarjeta">
+        <div id="icon">
+          <i class="fa-brands fa-square-github"></i>
+        </div>
+        <div id="nombre">
+          <h4>Github</h4>
+        </div>
+      </div>
+      <div id="tarjeta">
+        <div id="icon">
+          <i class="fa-brands fa-bootstrap"></i>
+        </div>
+        <div id="nombre">
+          <h4>Bootstrap</h4>
+        </div>
+      </div>
+      <div id="tarjeta">
+        <div id="icon">
+          <i class="fa-solid fa-database"></i>
+        </div>
+        <div id="nombre">
+          <h4>SQL <br> No SQL</h4>
+        </div>
+      </div>
+      </div>
+    </div>
   <div>
     <h1>Mi Portafolio</h1>
       <div id="cajas" >
-      <h1 >Encriptador de Texto</h1>
+      <h2 >Encriptador de Texto</h2>
           <a href="https://jcallea.github.io/EncrypText/">
 
-              <button id="btnencrip">Click</button>
+              <button id="btnencrip">CLICK</button>
     </a>
 
       <h3>Descripción</h3>
