--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <!-- Botón -->
     <label for="switch-label" class="switch-button__label"></label>
 </div>
-    <img id="perfil" src="/perfil.jpg" alt="">
+<div>
+      <img id="perfil" src="/perfil.jpg" alt="">
+
+</div>
     <h1>Fullstack Developer</h1>
     <div id="cont">
       <div id="tarjeta">
@@ -110,9 +113,14 @@
     </div>
     <div id="cv">
       <h1>Descarga Mi CV</h1>
-      <a href="/CV_Jhonatan_Calle.pdf" download >
+      <div>
+         <a  href="/CV_Jhonatan_Calle.pdf" download >
           <button id="downcv">Descargar</button>
       </a>
+      </div>
+     
+      <a id="redes" class="fa fa-github" href="https://github.com/JcalleA"></a>
+      <a id="redes" class="fa fa-linkedin-square"  href="https://www.linkedin.com/in/jhonatan-calle/"></a>
     </div>
   <div>
     <h1>Mi Portafolio</h1>
@@ -149,14 +157,12 @@
   </div>
   </div>
   <div id="footercont">
-            <footer>
-                <div>
-                    <span>© 2023 Creado Por Jhonatan Calle</span>
-                    <br>
-                    <a class="fa fa-github" style="font-size:48px;color:rgb(255, 255, 255)"
-                        href="https://github.com/JcalleA"></a>
-                    <a class="fa fa-linkedin-square" style="font-size:48px;color:rgb(255, 255, 255)"
-                        href="https://www.linkedin.com/in/jhonatan-calle/"></a>
+      <footer>
+        <div>
+          <span>© 2023 Creado Por Jhonatan Calle</span>
+          <br>
+          <a id="redes" class="fa fa-github" href="http://github.com/JcalleA"></a>
+          <a id="redes" class="fa fa-linkedin-square" href="https://www.linkedin.com/in/jhonatan-calle/"></a>
             </footer>
         </div>
 <script src="index.js"></script>
