--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <label for="switch-label" class="switch-button__label"></label>
     </div>
     <div>
-      <img id="perfil" src="/perfil.jpg" alt="">
+      <img id="perfil" src="/recursos/perfil.jpg" alt="">
 
     </div>
     <h1>Fullstack Developer</h1>
@@ -115,7 +115,7 @@
   <div id="cv">
     <h1>Descarga Mi CV</h1>
     <div>
-      <a href="/CV_Jhonatan_Calle.pdf" download>
+      <a href="/recursos/CV_Jhonatan_Calle.pdf" download>
         <button id="downcv">Descargar</button>
       </a>
     </div>
@@ -128,7 +128,8 @@
     <div id="cont2">
       <div id="cajas">
         <h2>Encriptador de Texto</h2>
-        <button id="btnencrip" style="background-image: url(/matrix.gif);"></button>
+        
+        <img id="btnencrip" src="/recursos/matrix.gif" ></img>
         <div>
           <a id="linkPage" class="fa-solid fa-file-code" href="https://github.com/JcalleA/EncrypText"></a>
 
@@ -137,7 +138,7 @@
       </div>
       <div id="cajas">
         <h2>Buscador Servicios</h2>
-        <button id="btnencrip" style="background-image: url(/busca.gif);"></button>
+        <img id="btnencrip" src="/recursos/people.gif" ></img>
         <div>
           <a id="linkPage" class="fa-solid fa-file-code" href="https://github.com/JcalleA/Bank-Jobs"></a>
 
@@ -148,7 +149,7 @@
     <div id="cont2">
       <div id="cajas">
         <h2>Negocios Manager</h2>
-        <button id="btnencrip" style="background-image: url(/busca.gif);"></button>
+        <img id="btnencrip" src="/recursos/manager.gif"></img>
         <div>
           <a id="linkPage" class="fa-solid fa-file-code" href="https://github.com/JcalleA/my-style-shop"></a>
           <!-- a id="linkPage" class="fa-solid fa-pager" href="https://jcallea.github.io/EncrypText/"></a !-->
@@ -156,7 +157,7 @@
       </div>
     <div id="cajas">
       <h2>Youtube Downloader</h2>
-      <div id="btnencrip" style="background-image: url(/giphy.gif);"></div>
+      <img id="btnencrip" src="/recursos/giphy.gif" ></img>
       <div>
         <a id="linkPage" class="fa-solid fa-file-code" href="https://github.com/JcalleA/Descargar-viudeos-de-youtube"></a>
         <!-- a id="linkPage" class="fa-solid fa-pager" href="https://jcallea.github.io/EncrypText/"></a !-->
