--- a/index.html
+++ b/index.html
@@ -12,166 +12,272 @@
 </head>
 
 <body id="thema">
-  <div>
-    <h1>Dev Jhonatan Calle</h1>
-    <h2>Pagina en desarrollo</h2>
-    <div class="switch-button">
+    <div class="menu">
+      <div class="reloj">
+        <div class="unidades">
+          <h1 id="hr"></h1>
+        </div>
+        <div>
+            <h1>:</h1>
+        </div>
+        <div class="unidades">
+          <h1 id="mn"></h1>
+        </div>
+        <div>
+          <h1>:</h1>
+        </div>
+        <div class="unidades">
+          <h1 id="sg"></h1>
+        </div>
+        <div>
+          <h1>-</h1>
+        </div>
+        <div class="unidades">
+          <h1 id="am"></h1>
+      </div>
+      </div>
+        <div class="switch-button">
+          <h3>Theme Select</h3>
       <!-- Checkbox -->
       <input type="checkbox" name="switch-button" id="switch-label" class="switch-button__checkbox"
         onclick="themeChange()">
       <!-- Botón -->
       <label for="switch-label" class="switch-button__label"></label>
     </div>
+    </div>
+  <div>
+    <h2>Pagina en desarrollo</h2>
+    <div class="name">
+        <h1>Jhonatan Calle</h1>
+      </div>
     <div>
-      <img id="perfil" src="/recursos/perfil.jpg" alt="">
-
+      <img class="perfil" src="/recursos/perfil.jpg" alt="">
     </div>
     <h1>Fullstack Developer</h1>
-    <div id="cont">
-      <div id="tarjeta">
-        <div id="icon">
+    <div class="cont">
+      <div class="slider">
+      <div class="tarjeta">
+        <div class="icon">
           <i class="fa-brands fa-html5 "> </i>
         </div>
-        <div id="nombre">
+        <div class="nombre">
           <h4>Html</h4>
         </div>
       </div>
-      <div id="tarjeta">
-        <div id="icon">
+      <div class="tarjeta">
+        <div class="icon">
           <i class="fa-brands fa-react "> </i>
         </div>
-        <div id="nombre">
+        <div class="nombre">
           <h4>React</h4>
         </div>
       </div>
-      <div id="tarjeta">
-        <div id="icon">
+      <div class="tarjeta">
+        <div class="icon">
           <i class="fa-brands fa-java"></i>
         </div>
-        <div id="nombre">
+        <div class="nombre">
           <h4>Java</h4>
         </div>
       </div>
-      <div id="tarjeta">
-        <div id="icon">
+      <div class="tarjeta">
+        <div class="icon">
           <i class="fa-brands fa-square-js"></i>
         </div>
-        <div id="nombre">
+        <div class="nombre">
           <h4>JavaScrip</h4>
         </div>
       </div>
-      <div id="tarjeta">
-        <div id="icon">
+      <div class="tarjeta">
+        <div class="icon">
           <i class="fa-brands fa-css3-alt"></i>
         </div>
-        <div id="nombre">
+        <div class="nombre">
           <h4>CSS</h4>
         </div>
       </div>
-    </div>
-    <div id="cont">
-      <div id="tarjeta">
-        <div id="icon">
+      <div class="tarjeta">
+        <div class="icon">
           <i class="fa-brands fa-python"></i>
         </div>
-        <div id="nombre">
+        <div class="nombre">
           <h4>Python</h4>
         </div>
       </div>
-      <div id="tarjeta">
-        <div id="icon">
+      <div class="tarjeta">
+        <div class="icon">
           <i class="fa-brands fa-node"></i>
         </div>
-        <div id="nombre">
+        <div class="nombre">
           <h4>Node</h4>
         </div>
       </div>
-      <div id="tarjeta">
-        <div id="icon">
+      <div class="tarjeta">
+        <div class="icon">
           <i class="fa-brands fa-square-github"></i>
         </div>
-        <div id="nombre">
+        <div class="nombre">
           <h4>Github</h4>
         </div>
       </div>
-      <div id="tarjeta">
-        <div id="icon">
+      <div class="tarjeta">
+        <div class="icon">
           <i class="fa-brands fa-bootstrap"></i>
         </div>
-        <div id="nombre">
+        <div class="nombre">
           <h4>Bootstrap</h4>
         </div>
       </div>
-      <div id="tarjeta">
-        <div id="icon">
+      <div class="tarjeta">
+        <div class="icon">
           <i class="fa-solid fa-database"></i>
         </div>
-        <div id="nombre">
+        <div class="nombre">
+          <h4>SQL <br> No SQL</h4>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="icon">
+          <i class="fa-brands fa-html5 "> </i>
+        </div>
+        <div class="nombre">
+          <h4>Html</h4>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="icon">
+          <i class="fa-brands fa-react "> </i>
+        </div>
+        <div class="nombre">
+          <h4>React</h4>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="icon">
+          <i class="fa-brands fa-java"></i>
+        </div>
+        <div class="nombre">
+          <h4>Java</h4>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="icon">
+          <i class="fa-brands fa-square-js"></i>
+        </div>
+        <div class="nombre">
+          <h4>JavaScrip</h4>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="icon">
+          <i class="fa-brands fa-css3-alt"></i>
+        </div>
+        <div class="nombre">
+          <h4>CSS</h4>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="icon">
+          <i class="fa-brands fa-python"></i>
+        </div>
+        <div class="nombre">
+          <h4>Python</h4>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="icon">
+          <i class="fa-brands fa-node"></i>
+        </div>
+        <div class="nombre">
+          <h4>Node</h4>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="icon">
+          <i class="fa-brands fa-square-github"></i>
+        </div>
+        <div class="nombre">
+          <h4>Github</h4>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="icon">
+          <i class="fa-brands fa-bootstrap"></i>
+        </div>
+        <div class="nombre">
+          <h4>Bootstrap</h4>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="icon">
+          <i class="fa-solid fa-database"></i>
+        </div>
+        <div class="nombre">
           <h4>SQL <br> No SQL</h4>
         </div>
       </div>
     </div>
+    </div>
   </div>
-  <div id="cv">
+  <div class="cv">
     <h1>Descarga Mi CV</h1>
     <div>
       <a href="/recursos/CV_Jhonatan_Calle.pdf" download>
-        <button id="downcv">Descargar</button>
+        <button class="downcv">Descargar</button>
       </a>
     </div>
 
-    <a id="redes" class="fa fa-github" href="https://github.com/JcalleA"></a>
-    <a id="redes" class="fa fa-linkedin-square" href="https://www.linkedin.com/in/jhonatan-calle/"></a>
+    <a class="fa fa-github" href="https://github.com/JcalleA"></a>
+    <a class="fa fa-linkedin-square" href="https://www.linkedin.com/in/jhonatan-calle/"></a>
   </div>
   <div>
     <h1>Mi Portafolio</h1>
-    <div id="cont2">
-      <div id="cajas">
+    <div class="cont2">
+      <div class="cajas">
         <h2>Encriptador de Texto</h2>
-        
-        <img id="btnencrip" src="/recursos/matrix.gif" ></img>
+        <img class="btnencrip" src="/recursos/matrix.gif" ></img>
         <div>
-          <a id="linkPage" class="fa-solid fa-file-code" href="https://github.com/JcalleA/EncrypText"></a>
+          <a class="fa-solid fa-file-code" href="https://github.com/JcalleA/EncrypText"></a>
 
-          <a id="linkPage" class="fa-solid fa-pager" href="https://jcallea.github.io/EncrypText/"></a>
+          <a class="fa-solid fa-pager" href="https://jcallea.github.io/EncrypText/"></a>
         </div>
       </div>
-      <div id="cajas">
+      <div class="cajas">
         <h2>Buscador Servicios</h2>
-        <img id="btnencrip" src="/recursos/people.gif" ></img>
+        <img class="btnencrip" src="/recursos/people.gif" ></img>
         <div>
-          <a id="linkPage" class="fa-solid fa-file-code" href="https://github.com/JcalleA/Bank-Jobs"></a>
+          <a class="fa-solid fa-file-code" href="https://github.com/JcalleA/Bank-Jobs"></a>
 
           <!-- a id="linkPage" class="fa-solid fa-pager" href="https://jcallea.github.io/EncrypText/"></a !-->
         </div>
       </div>
     </div>
-    <div id="cont2">
-      <div id="cajas">
+    <div class="cont2">
+      <div class="cajas">
         <h2>Negocios Manager</h2>
-        <img id="btnencrip" src="/recursos/manager.gif"></img>
+        <img class="btnencrip" src="/recursos/manager.gif"></img>
         <div>
-          <a id="linkPage" class="fa-solid fa-file-code" href="https://github.com/JcalleA/my-style-shop"></a>
+          <a class="fa-solid fa-file-code" href="https://github.com/JcalleA/my-style-shop"></a>
           <!-- a id="linkPage" class="fa-solid fa-pager" href="https://jcallea.github.io/EncrypText/"></a !-->
         </div>
       </div>
-    <div id="cajas">
+    <div class="cajas">
       <h2>Youtube Downloader</h2>
-      <img id="btnencrip" src="/recursos/giphy.gif" ></img>
+      <img class="btnencrip" src="/recursos/giphy.gif" ></img>
       <div>
-        <a id="linkPage" class="fa-solid fa-file-code" href="https://github.com/JcalleA/Descargar-viudeos-de-youtube"></a>
+        <a class="fa-solid fa-file-code" href="https://github.com/JcalleA/Descargar-viudeos-de-youtube"></a>
         <!-- a id="linkPage" class="fa-solid fa-pager" href="https://jcallea.github.io/EncrypText/"></a !-->
       </div>
     </div>
   </div>
   </div>
-  <div id="footercont">
+  <div class="footercont">
     <footer>
       <div>
         <span>© 2023 Creado Por Jhonatan Calle</span>
         <br>
-        <a id="redes" class="fa fa-github" href="http://github.com/JcalleA"></a>
-        <a id="redes" class="fa fa-linkedin-square" href="https://www.linkedin.com/in/jhonatan-calle/"></a>
+        <a class="fa fa-github" href="http://github.com/JcalleA"></a>
+        <a class="fa fa-linkedin-square" href="https://www.linkedin.com/in/jhonatan-calle/"></a>
     </footer>
   </div>
   <script src="index.js"></script>
