--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body id="thema">
     <div class="menu">
-      <div class="reloj">
+      <div class="reloj" id="reloj">
         <div class="unidades">
           <h1 id="hr"></h1>
         </div>
