--- a/index.html
+++ b/index.html
@@ -270,6 +270,16 @@
       </div>
     </div>
   </div>
+      <div class="cont2">
+        <div class="cajas">
+        <h2>Tic Tac Toe</h2>
+        <img class="btnencrip" src="/recursos/tictactoe.gif" ></img>
+        <div>
+          <a class="fa-solid fa-file-code" href="https://github.com/JcalleA/tictactoe"></a>
+          <a id="linkPage" class="fa-solid fa-pager" href="https://jcallea.github.io/tictactoe/"></a >
+        </div>
+      </div>
+  </div>
   </div>
   <div class="footercont">
     <footer>
