--- a/index.html
+++ b/index.html
@@ -630,28 +630,44 @@
     <div>
       <form class="footer__form" action="https://formsubmit.co/kalle-1413@hotmail.com" method="POST">
         <h1>Contactame 👇</h1>
-        <div class="form__entry">
-          <label>Nombre</label>
-          <input class="form__input" type="text" name="name" required>
+        <div class="form__container">
+          <div class="form__entry">
+            <label>Nombre</label>
+          </div>
+          <div class="form__input">
+            <input type="text" name="name" required>
+          </div>
         </div>
-        <div class="form__entry">
-          <label>Email</label>
-          <input class="form__input" type="email" name="email" required>
+        <div class="form__container">
+          <div class="form__entry">
+            <label>Email</label>
+          </div>
+          <div class="form__input">
+            <input type="email" name="email" required>
+          </div>
         </div>
-        <div class="form__entry">
-          <label>Asusnto</label>
-          <input class="form__input" type="text" name="_subject" required>
+        <div class="form__container">
+          <div class="form__entry">
+            <label>Asusnto</label>
+          </div>
+          <div class="form__input">
+            <input type="text" name="_subject" required>
+          </div>
         </div>
-        <div class="form__entry">
-          <label>Mensaje</label>
-          <input class="form__input" type="mensaje" name="mensaje" required>
+        <div class="form__container">
+          <div class="form__entry">
+            <label>Mensaje</label>
+          </div>
+          <div class="form__input">
+            <input type="mensaje" name="mensaje" required>
+          </div>
         </div>
         <button type="submit">Enviar</button>
       </form>
     </div>
     <div class="whatsapp">
       <h1>Escribeme por Whatsapp</h1>
-      <a  href="https://wa.link/28oef0" target="_blank"><img src="/recursos/boton-whatsapp.png" alt=""></a>
+      <a href="https://wa.link/28oef0" target="_blank"><img class="whatsapp__img" src="/recursos/boton-whatsapp.png" alt=""></a>
     </div>
     <div>
       <a class="fa fa-github" href="http://github.com/JcalleA" target="_blank"></a>
