--- a/index.html
+++ b/index.html
@@ -460,6 +460,8 @@
         <h2>Formación en UX Design</h2>
         <h3>2023</h3>
       </div>
+    </div>
+    <div class="formacion__container">
       <div class="formacion__tarjeta">
         <img class="formacion__img" src="/recursos/Correlation-One.png" alt="">
         <h2>Data Science</h2>
@@ -472,7 +474,7 @@
       </div>
     </div>
     <div class="formacion__container cursos">
-      <div class="formacion__tarjeta">
+      <div class="formacion__tarjeta__cursos">
         <img class="formacion__img" src="/recursos/google.png" alt="">
         <ol>
           <li>Google Cloud Computing Foundations 2022</li>
@@ -482,7 +484,7 @@
           <li>Cloud Computing Fundamentals 2022</li>
         </ol>
       </div>
-      <div class="formacion__tarjeta">
+      <div class="formacion__tarjeta__cursos">
         <img class="formacion__img" src="/recursos/patzi.png" alt="">
         <ol>
           <li>JavaScrip 2022</li>
@@ -490,7 +492,7 @@
           <li>Introduccion React.js 2022</li>
         </ol>
       </div>
-      <div class="formacion__tarjeta">
+      <div class="formacion__tarjeta__cursos">
         <img class="formacion__img" src="/recursos/open.png" alt="">
         <ol>
           <li>Conceptos Programacion 2022</li>
@@ -500,7 +502,7 @@
           <li>Python 2022</li>
         </ol>
       </div>
-      <div class="formacion__tarjeta">
+      <div class="formacion__tarjeta__cursos">
         <img class="formacion__img" src="/recursos/sena.png" alt="">
         <ol>
           <li>Manejo Pruebas De Software 2022</li>
@@ -511,7 +513,7 @@
           <li>Tecnico Produccion Industrial 2012</li>
         </ol>
       </div>
-      <div class="formacion__tarjeta">
+      <div class="formacion__tarjeta__cursos">
         <img class="formacion__img" src="/recursos/ubits.png" alt="">
         <ol>
           <li>Trabajo Colaborativo 2023</li>
@@ -522,7 +524,7 @@
           <li>Seminario Empresarial Sindical 2022</li>
         </ol>
       </div>
-      <div class="formacion__tarjeta">
+      <div class="formacion__tarjeta__cursos">
         <img class="formacion__img" src="/recursos/bomberos.png" alt="">
         <ol>
           <li>Brigada De Emergencias 2019</li>
@@ -587,7 +589,7 @@
     <div class="portafolio__container">
       <div class="portafolio__tarjeta">
         <h2>Negocios Manager</h2>
-        <h2>React-Mongo-Node</h2>
+        <h2>MERN</h2>
         <img class="portafolio__img" src="/recursos/manager.gif"></img>
         <div>
           <h3>Codigo</h3>
@@ -667,7 +669,8 @@
     </div>
     <div class="whatsapp">
       <h1>Escribeme por Whatsapp</h1>
-      <a href="https://wa.link/28oef0" target="_blank"><img class="whatsapp__img" src="/recursos/boton-whatsapp.png" alt=""></a>
+      <a href="https://wa.link/28oef0" target="_blank"><img class="whatsapp__img" src="/recursos/boton-whatsapp.png"
+          alt=""></a>
     </div>
     <div>
       <a class="fa fa-github" href="http://github.com/JcalleA" target="_blank"></a>
